<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dim_10_dp"
    tools:context=".movies_series.view.MoviesSeriesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/tvMediaTrending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_trending"
        android:textStyle="bold"
        android:textColor="@color/color_black"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@id/rvMediaTrending"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMediaTrending"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:listitem="@layout/example_series_movies"
        app:layout_constraintBottom_toTopOf="@id/rvMediaTrending"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvMediaAiring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_airing"
        android:textStyle="bold"
        android:textColor="@color/color_black"
        android:textSize="21sp"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/rvMediaTrending"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMediaAiring"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:listitem="@layout/example_series_movies"
        app:layout_constraintTop_toBottomOf="@id/tvMediaAiring"/>

    <TextView
        android:id="@+id/tvMediaPopular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_popular"
        android:textStyle="bold"
        android:textColor="@color/color_black"
        android:textSize="21sp"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/rvMediaAiring"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMediaPopular"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:listitem="@layout/example_series_movies"
        app:layout_constraintTop_toBottomOf="@id/tvMediaPopular"/>

        <TextView
            android:id="@+id/tvMediaUpcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_upcoming"
            android:textStyle="bold"
            android:textColor="@color/color_black"
            android:textSize="21sp"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@id/rvMediaPopular"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMediaUpcoming"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:listitem="@layout/example_series_movies"
            app:layout_constraintTop_toBottomOf="@id/tvMediaUpcoming"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>