<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".moviesseries.view.moviedetail.SerieDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleTextAppearance="@style/CollapsingToolbar.Expanded.Text"
            app:contentScrim="@color/color_white"
            android:background="@color/color_white"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <ImageView
                android:id="@+id/ivDetailedBackdrop"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:fitsSystemWindows="true"
                android:src="@drawable/cover_django" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivDetailedPoster"
                    android:layout_width="@dimen/dim_120_dp"
                    android:layout_height="@dimen/dim_200_dp"
                    android:layout_marginStart="@dimen/dim_15_dp"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cover_django"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintBottom_toTopOf="@id/linearLayout2"
                    app:layout_constraintStart_toStartOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/tvVoteCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/media_score_count"
                            android:textColor="@color/color_black"
                            android:textSize="14sp"
                            android:layout_gravity="center"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                        <ImageView
                            android:id="@+id/ivVoteCount"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:tint="@color/colorPrimary"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_baseline_how_to_vote_24"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvMediaScore"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/shape_score"
                        android:gravity="center"
                        android:text="@string/media_score"
                        android:textColor="@color/color_black"
                        android:textSize="20sp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="2dp"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tvDetailedTitle"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:gravity="center|left"
                    android:lines="2"
                    android:text="@string/title_series_movies"
                    android:textColor="@color/color_black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="200dp"
                    app:layout_constraintStart_toEndOf="@+id/ivDetailedPoster"
                    app:layout_constraintTop_toTopOf="parent" />


                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toEndOf="@id/ivDetailedPoster"
                    app:layout_constraintTop_toBottomOf="@id/tvDetailedTitle">

                    <TextView
                        android:id="@+id/tvMediaReleaseDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:gravity="center|left"
                        android:text="@string/title_release_date"
                        android:textColor="@color/color_black"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/tvMediaRuntime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:gravity="center|left"
                        android:text="@string/title_runtime"
                        android:textColor="@color/color_black"
                        android:textSize="14sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toEndOf="@id/linearLayout1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="10dp">

                    <ImageView
                        android:id="@+id/ivWatchlist"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="80dp"
                        app:tint="@color/colorPrimary"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_baseline_bookmark_border_24"/>

                    <ImageView
                        android:id="@+id/ivFavorite"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="10dp"
                        app:tint="@color/colorPrimary"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_baseline_favorite_border_24"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tbDetailedMovieTitle"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/title_series_movies"
                app:popupTheme="@style/AppTheme"
                android:layout_marginTop="24dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:layout_collapseMode="pin">

                <ImageView
                    android:id="@+id/imgReturn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:layout_marginStart="@dimen/dim_10_dp"
                    android:layout_marginTop="@dimen/dim_10_dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/colorPrimary" />

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <LinearLayout
            android:id="@+id/toolbarBottomBar2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_5_dp"
            android:background="@color/colorPrimary"
            app:layout_anchor="@+id/appBarLayout2"
            app:layout_anchorGravity="bottom|center"
            android:orientation="horizontal" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarBottomBar2"
            app:tabGravity="fill"
            app:tabMaxWidth="0dp"
            app:tabMode="fixed" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/my_view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
            app:layout_constraintStart_toStartOf="parent"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>